[elixir-otp] chapter 13 - 18.
- matching head and tails
- recursion
- slicing and dicing with enum (1 & 2)
- comprehensions
- a peek at Phoenix
- test automation

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ exercise-solutions/
 upload-images/
 video-code/
 vscode/
+
+# - from chapter "17. A Peek At Phoenix" (it was just an explanation)
+refuge/
